updated index.js / .html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="name">
                 <p class="logo-color p-content-space">Hello, my name is</p>
                 <h1 class="nameTitle">Simone Milanesio.<br><span id="arrayTitle">I'm</span></h1>
-                <p class="p-space">I'm a computer science student based in Turin, IT.<br>Future Web Developer and a 
+                <p class="p-space">I'm a computer science student based in Turin, IT.<br>Future Web Developer and a
                     sports lover. </p>
                 <a href="mailto:simomilanesio5@gmail.com">
                     <button type="button" class="btn btn-outline-default waves-effect">Get in touch</button>
@@ -162,7 +162,8 @@
             </div>
         </section>
         <section id="project">
-            <h3 class=""><span class="logo-color title-paragh-size">03.</span>Some projects developed during courses</h3>
+            <h3 class=""><span class="logo-color title-paragh-size">03.</span>Some projects developed during courses
+            </h3>
             <div class="row row-cols-1 row-cols-md-2 row-cols-sm-1 row-cols-lg-3">
                 <div class="col mb-4">
                     <div class="card">
@@ -175,8 +176,9 @@
                         <div class="card-body">
                             <h4 class="card-title">My first portfolio</h4>
                             <p class="card-text"></p>
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
-                                    href="https://simomila91.github.io/MySite/" target="_blank">Visit</a></button>
+                            <a href="https://simomila91.github.io/MySite/" target="_blank">
+                                <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -193,8 +195,9 @@
                             <p class="card-text">
                                 A dog dating application!
                                 I only used HTML and CSS.</p>
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
-                                    href="https://simomila91.github.io/TinDog/." target="_blank">Visit</a></button>
+                            <a href="https://simomila91.github.io/TinDog/." target="_blank">
+                                <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -211,8 +214,9 @@
                             <p class="card-text">
                                 A fun application where you can play digital drums.I know, it's not Real Drum but it's
                                 already something.</p>
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
-                                    href="https://simomila91.github.io/Drum-Kit/" target="_blank">Visit</a></button>
+                            <a href="https://simomila91.github.io/Drum-Kit/" target="_blank">
+                                <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -227,9 +231,9 @@
                         <div class="card-body">
                             <h4 class="card-title">Simon Game</h4>
                             <p class="card-text">A simple game developed during a javascript course. Let's play? 😄</p>
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect"><a
-                                    href="https://simomila91.github.io/SimonGameChallange/"
-                                    target="_blank">Visit</a></button>
+                            <a href="https://simomila91.github.io/SimonGameChallange/" target="_blank">
+                                <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -244,8 +248,11 @@
                         <div class="card-body">
                             <h4 class="card-title">Secret Diary</h4>
                             <p class="card-text">
-                                An application where you can sign up and write a secret diary. Developed with HTML - CSS - PHP - SQL</p>
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect"><a href="http://secretdiary.infinityfreeapp.com/" target="_blank">Visit</a></button>
+                                An application where you can sign up and write a secret diary. Developed with HTML - CSS
+                                - PHP - SQL</p>
+                            <a href="http://secretdiary.infinityfreeapp.com/" target="_blank">
+                                <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            </a>
                         </div>
                     </div>
                 </div>
