--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <section id="project">
             <h3 class=""><span class="logo-color title-paragh-size">03.</span>Some projects developed during courses
             </h3>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-sm-1 row-cols-lg-3">
+            <div class=" row row-cols-1 row-cols-md-2 row-cols-sm-1 row-cols-lg-3">
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
@@ -177,6 +177,8 @@
                         <div class="card-body">
                             <h4 class="card-title">My first portfolio</h4>
                             <p class="card-text"></p>
+                        </div>
+                        <div class="card-footer">
                             <a href="https://simomila91.github.io/MySite/" target="_blank">
                                 <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
                             </a>
@@ -196,6 +198,8 @@
                             <p class="card-text">
                                 A dog dating application!
                                 I only used HTML and CSS.</p>
+                        </div>
+                        <div class="card-footer">
                             <a href="https://simomila91.github.io/TinDog/." target="_blank">
                                 <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
                             </a>
@@ -215,6 +219,8 @@
                             <p class="card-text">
                                 A fun application where you can play digital drums.I know, it's not Real Drum but it's
                                 already something.</p>
+                        </div>
+                        <div class="card-footer">
                             <a href="https://simomila91.github.io/Drum-Kit/" target="_blank">
                                 <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
                             </a>
@@ -232,6 +238,8 @@
                         <div class="card-body">
                             <h4 class="card-title">Simon Game</h4>
                             <p class="card-text">A simple game developed during a javascript course. Let's play? 😄</p>
+                        </div>
+                        <div class="card-footer">
                             <a href="https://simomila91.github.io/SimonGameChallange/" target="_blank">
                                 <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
                             </a>
@@ -251,6 +259,8 @@
                             <p class="card-text">
                                 An application where you can sign up and write a secret diary. Developed with HTML - CSS
                                 - PHP - SQL</p>
+                        </div>
+                        <div class="card-footer">
                             <a href="http://secretdiary.infinityfreeapp.com/" target="_blank">
                                 <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
                             </a>
@@ -269,6 +279,8 @@
                             <h4 class="card-title">Todo List</h4>
                             <p class="card-text">A todolist server side application developed with Jsx, Node and
                                 MongoDB.</p>
+                        </div>
+                        <div class="card-footer">
                             <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
                         </div>
                     </div>
