WeatherMeNow project added

--- a/index.html
+++ b/index.html
@@ -270,6 +270,25 @@
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
+                            <img class="card-img-top" src="assets/images/weatherMeNow.png" alt="weatherMeNow image">
+                            <a href="#!" target="_blank">
+                                <div class="mask rgba-white-slight"></div>
+                            </a>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Weather MENOW</h4>
+                            <p class="card-text">A website where you can search for the weather forecast. Developed with
+                                HTML - CSS - JQuery
+                                through the use of the API OpenWeatherMap.</p>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <div class="view overlay">
                             <img class="card-img-top" src="assets/images/todolist.jpg" alt="Todolist image">
                             <a href="#!" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
