change title project section

--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
             </div>
         </section>
         <section id="project">
-            <h3 class=""><span class="logo-color title-paragh-size">03.</span>Some projects developed during courses
+            <h3 class=""><span class="logo-color title-paragh-size">03.</span>Some of my projects and others developed
+                during courses
             </h3>
             <div class=" row row-cols-1 row-cols-md-2 row-cols-sm-1 row-cols-lg-3">
                 <div class="col mb-4">
