link weather website added

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
                                 through the use of the API OpenWeatherMap.</p>
                         </div>
                         <div class="card-footer">
+                            <a href="https://weather-me-now.herokuapp.com/" target="_blank"></a>
                             <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
                         </div>
                     </div>
