--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     <div class="card">
                         <div class="view overlay">
                             <img class="card-img-top" src="assets/images/weatherMeNow.png" alt="weatherMeNow image">
-                            <a href="#!" target="_blank">
+                            <a href="https://weather-me-now.netlify.app/" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
@@ -283,26 +283,30 @@
                                 through the use of the API OpenWeatherMap.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="https://weather-me-now.herokuapp.com/" target="_blank"></a>
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            <a href="https://weather-me-now.netlify.app/" target="_blank">
+                                <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
-                            <img class="card-img-top" src="assets/images/todolist.jpg" alt="Todolist image">
-                            <a href="#!" target="_blank">
+                            <img class="card-img-top" src="assets/images/mylibrary.png" alt="Todolist image">
+                            <a href="https://mylibrary-italy.netlify.app/" target="_blank">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Todo List</h4>
-                            <p class="card-text">A todolist server side application developed with Jsx, Node and
-                                MongoDB.</p>
+                            <h4 class="card-title">My Library</h4>
+                            <p class="card-text">A web app where you can search for free or for sale ebooks,
+                                save them on your personal page and read articles related to the world of books. Developed
+                            with React - Material UI - Node.js - MySql</p>
                         </div>
                         <div class="card-footer">
-                            <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            <a href="https://mylibrary-italy.netlify.app/" target="_blank">
+                                <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            </a>
                         </div>
                     </div>
                 </div>
