--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col-md-4 col-lg-4">
                         <div class="distance">
-                            <img src="assets/images/ciaociao.jpg" class="img-fluid z-depth-3 rounded-circle border-img"
+                            <img src="assets/images/me.jpg" class="img-fluid z-depth-3 rounded-circle border-img"
                                 alt="Image">
                         </div>
                     </div>
