--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="container-lg container-md container-sm">
                 <h3 class="logo-color title-paragh-size">04.What's next?</h3>
                 <h1>Get In Touch</h1>
-                <h4>If you love to develop WebSite or App as much as I do</h4>
+                <h4>If you love to develop WebSite as much as I do</h4>
                 <p>Contact me! We can exchange opinions, suggestions or we can collaborate for some projects!</p>
                 <a href="mailto:simomilanesio5@gmail.com">
                     <button type="button" class="btn btn-outline-default waves-effect">Say Hello!</button>
