github projects links added

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="bar" data-width="60%">
                         <div class="bar-inner">
                         </div>
-                        <div class="bar-percent">60%</div>
+                        <div class="bar-percent">75%</div>
                     </div>
                 </div>
                 <div class="bar-1">
@@ -183,6 +183,9 @@
                             <a href="https://simomila91.github.io/MySite/" target="_blank">
                                 <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
                             </a>
+                            <a href="https://github.com/SimoMila91/MySite" target="_blank" class="link-color-github">
+                              <i class="fab fa-github github-link"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -203,6 +206,9 @@
                         <div class="card-footer">
                             <a href="https://simomila91.github.io/TinDog/." target="_blank">
                                 <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            </a>
+                            <a href="https://github.com/SimoMila91/TinDog" target="_blank" class="link-color-github">
+                              <i class="fab fa-github github-link"></i>
                             </a>
                         </div>
                     </div>
@@ -225,6 +231,9 @@
                             <a href="https://simomila91.github.io/Drum-Kit/" target="_blank">
                                 <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
                             </a>
+                            <a href="https://github.com/SimoMila91/Drum-Kit" target="_blank" class="link-color-github">
+                              <i class="fab fa-github github-link"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -239,10 +248,14 @@
                         <div class="card-body">
                             <h4 class="card-title">Simon Game</h4>
                             <p class="card-text">A simple game developed during a javascript course. Let's play? 😄</p>
+                            
                         </div>
                         <div class="card-footer">
                             <a href="https://simomila91.github.io/SimonGameChallange/" target="_blank">
                                 <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            </a>
+                            <a href="https://github.com/SimoMila91/SimonGameChallange" target="_blank" class="link-color-github">
+                              <i class="fab fa-github github-link"></i>
                             </a>
                         </div>
                     </div>
@@ -265,6 +278,9 @@
                             <a href="https://weather-me-now.netlify.app/" target="_blank">
                                 <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
                             </a>
+                            <a href="https://github.com/SimoMila91/weather-app-netlify" target="_blank" class="link-color-github">
+                              <i class="fab fa-github github-link"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -285,6 +301,9 @@
                         <div class="card-footer">
                             <a href="https://mylibrary-italy.netlify.app/" target="_blank">
                                 <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
+                            </a>
+                            <a href="https://github.com/SimoMila91/mylibrary" target="_blank" class="link-color-github">
+                              <i class="fab fa-github github-link"></i>
                             </a>
                         </div>
                     </div>
