courses projects deleted

--- a/index.html
+++ b/index.html
@@ -163,103 +163,9 @@
             </div>
         </section>
         <section id="project">
-            <h3 class=""><span class="logo-color title-paragh-size">03.</span>Some of my projects and others developed
-                during courses
+            <h3 class=""><span class="logo-color title-paragh-size">03.</span>My personal projects
             </h3>
             <div class=" row row-cols-1 row-cols-md-2 row-cols-sm-1 row-cols-lg-3">
-                <div class="col mb-4">
-                    <div class="card">
-                        <div class="view overlay">
-                            <img class="card-img-top" src="assets/images/mysite.jpg" alt="Portfolio image">
-                            <a href="https://simomila91.github.io/MySite/" target="_blank">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">My first portfolio</h4>
-                            <p class="card-text"></p>
-                        </div>
-                        <div class="card-footer">
-                            <a href="https://simomila91.github.io/MySite/" target="_blank">
-                                <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
-                            </a>
-                            <a href="https://github.com/SimoMila91/MySite" target="_blank" class="link-color-github">
-                              <i class="fab fa-github github-link"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card">
-                        <div class="view overlay">
-                            <img class="card-img-top" src="assets/images/tindog.jpg" alt="TinDog image">
-                            <a href="https://simomila91.github.io/TinDog/." target="_blank">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Tindog</h4>
-                            <p class="card-text">
-                                A dog dating application!
-                                I only used HTML and CSS.</p>
-                        </div>
-                        <div class="card-footer">
-                            <a href="https://simomila91.github.io/TinDog/." target="_blank">
-                                <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
-                            </a>
-                            <a href="https://github.com/SimoMila91/TinDog" target="_blank" class="link-color-github">
-                              <i class="fab fa-github github-link"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card">
-                        <div class="view overlay">
-                            <img class="card-img-top" src="assets/images/drumKit.jpg" alt="DrumKit image">
-                            <a href="https://simomila91.github.io/Drum-Kit/" target="_blank">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Drum Kit</h4>
-                            <p class="card-text">
-                                A fun application where you can play digital drums.I know, it's not Real Drum but it's
-                                already something.</p>
-                        </div>
-                        <div class="card-footer">
-                            <a href="https://simomila91.github.io/Drum-Kit/" target="_blank">
-                                <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
-                            </a>
-                            <a href="https://github.com/SimoMila91/Drum-Kit" target="_blank" class="link-color-github">
-                              <i class="fab fa-github github-link"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card">
-                        <div class="view overlay">
-                            <img class="card-img-top" src="assets/images/game.jpg" alt="game image">
-                            <a href="https://simomila91.github.io/SimonGameChallange/" target="_blank">
-                                <div class="mask rgba-white-slight"></div>
-                            </a>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Simon Game</h4>
-                            <p class="card-text">A simple game developed during a javascript course. Let's play? 😄</p>
-                            
-                        </div>
-                        <div class="card-footer">
-                            <a href="https://simomila91.github.io/SimonGameChallange/" target="_blank">
-                                <button type="button" class="btn btn-md btn-outline-default waves-effect">Visit</button>
-                            </a>
-                            <a href="https://github.com/SimoMila91/SimonGameChallange" target="_blank" class="link-color-github">
-                              <i class="fab fa-github github-link"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
                 <div class="col mb-4">
                     <div class="card">
                         <div class="view overlay">
