--- a/index.html
+++ b/index.html
@@ -76,14 +76,13 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-6">
                         <h3><span class="logo-color title-paragh-size">01.</span> About Me</h3>
-                        <p>Hello! I'm Simone, I'm 29 years old and I started learning to code three years ago when I
+                        <p>Hello! I'm Simone, I'm 29 years old and I started learning to code four years ago when I
                             decided to come back to
                             study Computer Science to high
-                            school based in Moncalieri, in the discrict of Turin.<br> This year I will start a course of
-                            study at the <span class="important-word">Computer Science Department of the University of
-                                Turin</span>.<br>I began to code with a
+                            school based in Moncalieri, in the discrict of Turin.<br>Immediatly after the graduation, I enrolled myself at the <span class="important-word">Computer Science Department of the University of
+                                Turin</span>. I'm currently starting the second year of university.<br>Regarding my personal study path and not on programming languages, I began to code with a
                             little bit of C language and then I switched to others languages and frameworks such as
-                            Java, React, a little bit of Node.js and others.</p>
+                            Java, Javascript, React and a little bit of Node.js.</p>
                     </div>
                     <div class="col-md-4 col-lg-4">
                         <div class="distance">
@@ -114,7 +113,7 @@
                 </div>
                 <div class="bar-1">
                     <div class="title">Javascript</div>
-                    <div class="bar" data-width="50%">
+                    <div class="bar" data-width="80%">
                         <div class="bar-inner">
                         </div>
                         <div class="bar-percent">70%</div>
@@ -130,7 +129,7 @@
                 </div>
                 <div class="bar-1">
                     <div class="title">Java</div>
-                    <div class="bar" data-width="75%">
+                    <div class="bar" data-width="60%">
                         <div class="bar-inner">
                         </div>
                         <div class="bar-percent">75%</div>
@@ -138,7 +137,7 @@
                 </div>
                 <div class="bar-1">
                     <div class="title">ReactJS</div>
-                    <div class="bar" data-width="60%">
+                    <div class="bar" data-width="80%">
                         <div class="bar-inner">
                         </div>
                         <div class="bar-percent">75%</div>
